# eoswap

./: .gitignore  README.md  README_EOSWAPX.md  eoswapx.txt  mybuild.sh  myswaptest.sh  mytest.sh
ann/ann-front-end-dev/: Dockerfile  README.md  docker-compose.yml  example.env  package.json
ann/ann-front-end-dev/public/: index.html
ann/ann-front-end-dev/src/: App.js  ArtTradable.js  ContractManagement.js  ContractMgmt.js  NftTradable.js  NftTradablePrivate.js
ann/ann-front-end-dev/src/abi/: abi2name.json  erc1155_v0.1.json  erc20_v0.1.json  sub_art_factory_private_v0.1_events.json  sub_art_factory_v0.1.json  sub_art_tradable_v0.1.json  sub_auction_v0.1.json  sub_bundle_marketplace_v0.1.json  sub_contract_management_v0.1_events.json  sub_marketplace_v0.1.json  sub_nft_factory_private_v0.1.json  sub_oracle_v0.1.json  sub_price_seed_v0.1.json
ann/ann-front-end-dev/src/artfactory/: CreateNftContract.js  DisableTokenContract.js  RegisterTokenContract.js
ann/ann-front-end-dev/src/artfactoryprivate/: ArtFactoryPrivate.js  CreateNftContract.js
ann/ann-front-end-manual-config-parameters/: package.json  rococo_contract_parachain.env
ann/ann-front-end-manual-config-parameters/src/: AddressRegistry.js  App.js  ArtTradablePrivate.js  Artion.js  Erc20.js  Events.js  Oracle.js  PriceSeed.js  TokenRegistry.js  index.js
ann/ann-nft-marketplace-dev/: .gitignore  Cargo.tomls  README.md  art.json  build-all.sh  build-single.sh  build.sh  copy-all.sh  copy-json.sh  copy-test.sh  copy.sh  format.sh  test.sh  uploadcode.sh
ann/ann-nft-marketplace-dev/erc20/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/ioracle/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_address_registry/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_art_factory/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_art_factory_private/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_art_tradable/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_art_tradable_private/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_artion/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_auction/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_bundle_marketplace/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_contract_management/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_marketplace/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_nft_factory/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_nft_factory_private/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_nft_tradable/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_nft_tradable_private/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_oracle/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_price_seed/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-dev/sub_token_registry/: Cargo.toml  lib.rs
ann/ann-nft-marketplace-docs-dev/: BuyinganNFT.md  Collection.md  CreatingandSellinganNFT.md  Registeringacollection.md  Wrappingunwrappingtoken.md  api.md
ann/ann-rpc-test-dev/: README.md  copy.sh  jest.config.cjs  package.json  tsconfig.json  webpack.config.js
ann/ann-swap-dev/callback/isub_mint_callback/: Cargo.toml  lib.rs
ann/ann-swap-dev/sub_factory/: Cargo.toml  lib.rs
ann/ann-swap-dev/sub_pool/: Cargo.toml  bit_math.rs  fixed_point128.rs  fixed_point96.rs  full_math.rs  i256.rs  lib.rs  liquidity_math.rs  low_gas_safe_math.rs  primitives.rs  sqrt_price_math.rs  swap_math.rs  tick_math.rs  unsafe_math.rs
ann/ann-swap-dev/sub_swap_router/: bytes_lib.rs  lib.rs  path.rs  safe_cast.rs
ann/substrate-ink-contract-ts-deployer-dev/: README.md  article.md  copy.sh  package.json
ann/substrate-ink-contract-ts-deployer-dev/dockers/: .dockerignore  Dockerfile  Dockerfile copy  Dockerfileold  Dockerfilex  docker-compose.yml  docker-composeold.yml
ann/substrate-ink-contract-ts-deployer-dev/utils/: art.json  cmd.ts  code.ts  deploy.ts  json.ts  kv.json
contracts/: CMakeLists.txt
contracts/eodos/: CMakeLists.txt  batchrename.py
contracts/eodos/src/: eodos.cpp
contracts/eosdos/: CMakeLists.txt
contracts/eosdos/src/: eosdos.cpp
contracts/eoswap/: CMakeLists.txt  build.sh
contracts/eoswap/src/: eoswap.cpp  extended_token.cpp
contracts/roxe.tokenize/: CMakeLists.txt
contracts/roxe.tokenize/src/: roxe.tokenize.cpp
test/bios-boot-tutorial/: README.md  bios-boot-tutorial.py  mycmd.sh
test/eostest/: .env  eos_client.js  eos_rpc.js  eosrpc_client.js  package-lock.json  package.json
test/testfrontend/: .env  package-lock.json  package.json  uupdater.js
test/testfrontend/.history/: .env_20191014160157  .env_20191205172446  bosoracle_updater_20191122182348.js  bosoracle_updater_20191203172440.js  bosoracle_updater_20191205173239.js  bosoracle_updater_20191205182059.js  bosoracle_updater_20191205183510.js  bosoracle_updater_20191205183640.js  bosoracle_updater_20191205183956.js  bosoracle_updater_20191205184859.js  bosoracle_updater_20191205185221.js  bosoracle_updater_20191205190150.js  bosoracle_updater_20191205193812.js  bosoracle_updater_20191205194039.js  bosoracle_updater_20191205194517.js  bosoracle_updater_20191205195343.js  bosoracle_updater_20191205195350.js  bosoracle_updater_20191205195447.js  bosoracle_updater_20191206095220.js  bosoracle_updater_20191206095428.js  bosoracle_updater_20191206095457.js  bosoracle_updater_20191206095549.js  bosoracle_updater_20191206095621.js  bosoracle_updater_20191206095640.js  bosoracle_updater_20191206100629.js  bosoracle_updater_20191206111802.js  bosoracle_updater_20191206111806.js  bosoracle_updater_20191206111839.js  bosoracle_updater_20191206112057.js  bosoracle_updater_20191206112120.js  bosoracle_updater_20191206112206.js  bosoracle_updater_20191206112212.js  bosoracle_updater_20191206150133.js  bosoracle_updater_20191206150218.js  bosoracle_updater_20191206150231.js  bosoracle_updater_20191206150324.js  bosoracle_updater_20191206150346.js  bosoracle_updater_20191206150409.js  bosoracle_updater_20191206161045.js  oracle_updater_20191206151913.js  (+8 more)
tests/: contracts.hpp.in  eosdos_tests.cpp  eoswap_tests.cpp
(+217 files in other folders)
